Laboratorio 4/combos/combos/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\BlueJ\lib\bluejcore.jar;D:\BlueJ\lib\junit-4.11.jar;D:\BlueJ\lib\hamcrest-core-1.3.jar;D:\BlueJ\lib\lang-stride.jar;D:\BlueJ\lib\javafx\lib\javafx.base.jar;D:\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\BlueJ\lib\javafx\lib\javafx.media.jar;D:\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\BlueJ\lib\javafx\lib\javafx.web.jar;D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos
-d
D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc
-encoding
UTF-8
-charset
UTF-8
D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\ComboExcepcion.java
<---- end of javadoc command ---->
Loading source file D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\ComboExcepcion.java...
Constructing Javadoc information...
Standard Doclet version 11.0.2
Building tree for all the packages and classes...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\ComboExcepcion.html...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\package-summary.html...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\constant-values.html...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\serialized-form.html...
D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\Combo.java:49: error: <identifier> expected
            throw new ComboExcepcion(ComboExcepcion.
                                                    ^
Building index for all the packages and classes...
Building index for all classes...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\allclasses.html...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\allclasses.html...
Generating D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\combos\combos\doc\index.html...
1 error
